x86/amd64/x32/arm/arm64-generic: switch to kernel 3.14
Added device_tree USE flag to arm-generic and arm64-generic,
so that target 'zImage' is built instead of 'uImage'. This
solves the problem of missing LOADADDR info.

CQ-DEPEND=CL:202202
CQ-DEPEND=CL:202831
BUG=chromium:345508

TEST=remote trybot on:
amd64-generic-paladin
x86-generic-paladin
amd64-generic-full
x86-generic-full
arm-generic-full
arm64-generic-full

Change-Id: I7056ef3af7794cc4fa4535488478112abf5b8f34
Signed-off-by: Ben Zhang <benzh@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/201151
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/overlay-arm-generic/make.conf
+++ b/overlay-arm-generic/make.conf
@@ -7,6 +7,7 @@ CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
 USE="${USE} hardfp legacy_keyboard legacy_power_button neon"
 USE="${USE} xlib-glx"
+USE="${USE} kernel-3_14 device_tree"
 
 # PORTAGE_BINHOST is pulled in from prebuilt.conf
 source prebuilt.conf
