--- a/overlay-arm64-generic/make.conf
+++ b/overlay-arm64-generic/make.conf
@@ -7,6 +7,7 @@ ARM_FPU=neon
 
 USE="${USE} legacy_keyboard legacy_power_button neon"
 USE="${USE} xlib-glx"
+USE="${USE} kernel-3_14 device_tree"
 
 # No -fstack-protector on aarch64 yet
 USE="${USE} -hardened unified_depthcharge"
