migrate USE=kernel_next to kernel-3_8
These two flags are equivalent, so move away from the old kernel_next name.

BUG=chromium:375346
TEST=`cbuildbot {beaglebone,daisy,falco,leon,link,panther,peppy,stout,wolf,zako}-full` worked

Change-Id: I12e75c8eec47c01572405c814e539c3978ea9599
Reviewed-on: https://chromium-review.googlesource.com/203132
Tested-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Ben Zhang <benzh@chromium.org>
Reviewed-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Mike Frysinger <vapier@chromium.org>

--- a/overlay-link/make.conf
+++ b/overlay-link/make.conf
@@ -12,7 +12,7 @@ USE="${USE} -tests_factory_Leds"
 # Turn on the Creative CA0132 patch.
 USE="${USE} ca0132"
 
-# Use kernel-next with 3.4 wifi stack
-USE="${USE} kernel_next wireless34"
+# Use 3.8 kernel with 3.4 wifi stack
+USE="${USE} kernel-3_8 wireless34"
 
 MARCH_TUNE="-march=corei7"
