--- a/overlay-anglar/make.conf
+++ b/overlay-anglar/make.conf
@@ -5,7 +5,7 @@
 CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
 CHROMEOS_KERNEL_ARCH="x86_64"
 
-USE="${USE} anglar -display_backlight kernel_next legacy_keyboard"
+USE="${USE} anglar -display_backlight kernel-3_8 legacy_keyboard"
 USE="${USE} legacy_power_button lockvt wireless34"
 
 MARCH_TUNE="-march=corei7"
