--- a/overlay-daisy/make.conf
+++ b/overlay-daisy/make.conf
@@ -10,7 +10,7 @@ MARCH_TUNE="-march=armv7-a -mtune=cortex-a15 -mfpu=${ARM_FPU} -mfloat-abi=hard"
 CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
-USE="${USE} als bootimage cros_ec device_tree exynos hardfp kernel_next lockvt"
+USE="${USE} als bootimage cros_ec device_tree exynos hardfp kernel-3_8 lockvt"
 USE="${USE} neon -opengl opengles watchdog wireless34"
 # Set default build to snow, USE="-snow" to build daisy.
 USE="${USE} snow"
