--- a/overlay-falco/make.conf
+++ b/overlay-falco/make.conf
@@ -6,4 +6,4 @@ CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
 CHROMEOS_KERNEL_ARCH="x86_64"
 MARCH_TUNE="-march=corei7"
 
-USE="${USE} cros_ec falco intel_hdcp kernel_next lockvt watchdog wireless34"
+USE="${USE} cros_ec falco intel_hdcp kernel-3_8 lockvt watchdog wireless34"
