--- a/overlay-mccloud/make.conf
+++ b/overlay-mccloud/make.conf
@@ -6,5 +6,5 @@ CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
 CHROMEOS_KERNEL_ARCH="x86_64"
 MARCH_TUNE="-march=corei7 -mtune=generic"
 
-USE="${USE} -display_backlight kernel_next legacy_keyboard"
+USE="${USE} -display_backlight kernel-3_8 legacy_keyboard"
 USE="${USE} legacy_power_button lockvt -subpixel_rendering wireless34 mccloud"
