--- a/overlay-panther/make.conf
+++ b/overlay-panther/make.conf
@@ -5,7 +5,7 @@
 CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
 CHROMEOS_KERNEL_ARCH="x86_64"
 
-USE="${USE} -display_backlight kernel_next legacy_keyboard"
+USE="${USE} -display_backlight kernel-3_8 legacy_keyboard"
 USE="${USE} legacy_power_button lockvt panther -subpixel_rendering"
 # Normally, this is where we force ourselves to use the 3.4 wireless
 # stack.  However, for Panther we've moved this to the base profile,
