--- a/overlay-variant-parrot-ivb/make.conf
+++ b/overlay-variant-parrot-ivb/make.conf
@@ -6,5 +6,5 @@
 # For common settings use overlays/overlay-parrot/make.conf instead.
 # There is no need to duplicate information -- these files stack.
 
-# Use kernel-next with 3.4 wifi stack
-USE="${USE} kernel_next wireless34"
+# Use 3.8 kernel with 3.4 wifi stack
+USE="${USE} kernel-3_8 wireless34"
