--- a/overlay-wolf/make.conf
+++ b/overlay-wolf/make.conf
@@ -6,4 +6,4 @@ CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
 CHROMEOS_KERNEL_ARCH="x86_64"
 MARCH_TUNE="-march=corei7"
 
-USE="${USE} intel_hdcp kernel_next lockvt wireless34 wolf watchdog"
+USE="${USE} intel_hdcp kernel-3_8 lockvt wireless34 wolf watchdog"
