beaglebone/puppy: stop using kernel-next profile
We have a USE flag for selecting the kernel now, and we want to delete
the kernel-next profile, so stop using it here.

BUG=chromium:375346
TEST=`cbuildbot beaglebone-release` works

Change-Id: Id808f98b0e10904b955eb80a7efc77503c5fd839
Reviewed-on: https://chromium-review.googlesource.com/203680
Tested-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Ben Zhang <benzh@chromium.org>
Commit-Queue: Mike Frysinger <vapier@chromium.org>

--- a/overlay-beaglebone/make.conf
+++ b/overlay-beaglebone/make.conf
@@ -5,7 +5,7 @@ CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
 LINUX_FIRMWARE="ath9k_htc"
 
-USE="${USE} boot_dts_device_tree hardfp legacy_keyboard"
+USE="${USE} boot_dts_device_tree hardfp kernel-3_8 legacy_keyboard"
 USE="${USE} legacy_power_button neon -opengl opengles pam"
 USE="${USE} -tpm"
 
