--- a/overlay-puppy/make.conf
+++ b/overlay-puppy/make.conf
@@ -19,7 +19,7 @@ EXTRA_BUILD_ARGS="proprietary_codecs=1"
 # board-specific tinkering of these USE flags.
 # Check overlays/overlay-puppy/profiles to see if this is going on in the
 # selected profile.
-USE="${USE} cros_ec device_tree gpu_sandbox_allow_sysv_shm hardfp neon -opengl"
-USE="${USE} opengles tegra tegra-ldk tegra114-venice_dtb"
+USE="${USE} cros_ec device_tree gpu_sandbox_allow_sysv_shm hardfp kernel-3_8"
+USE="${USE} neon -opengl opengles tegra tegra-ldk tegra114-venice_dtb"
 
 TTY_CONSOLE="${TTY_CONSOLE} ttyS0"
