nyan_freon: Enable gbm and opengles
This lets us build chrome with ozone gbm support.
Also sort use flags alphabetically.

BUG=381257
TEST=build nyan_freon

Change-Id: I462f895045fc44b7dfcf29e17c74511366d75e53
Signed-off-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/204720

--- a/overlay-variant-nyan-freon/make.conf
+++ b/overlay-variant-nyan-freon/make.conf
@@ -2,7 +2,9 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-USE="${USE} nyan_big ozone -coreboot -bootimage -X egl gles2 -opengl shared-glapi"
+USE="${USE} nyan_big ozone -coreboot -bootimage"
+
+USE="${USE} egl gbm gles2 -opengl opengles shared-glapi -X"
 
 OZONE_PLATFORM="dri gbm"
 
