arm-generic/arm64-generic: Switch to EGL/GLES2 with gbm
We are switching to EGL/GLES2 everywhere for the freon efforts, so
let's start with the arm-generic/arm64-generic targets.

Signed-off-by: Stéphane Marchesin <marcheu@chromium.org>
Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=chromium:330196,chromium:384800,chromium:381257
TEST=cbuildbot arm-generic-full arm64-generic-full
CQ-DEPEND=CL:204177

Change-Id: Ibdca1f8cb7b7c86d4ea411fb494b6ebb13a03dd2
Reviewed-on: https://chromium-review.googlesource.com/204375
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Stéphane Marchesin <marcheu@chromium.org>

--- a/overlay-arm-generic/make.conf
+++ b/overlay-arm-generic/make.conf
@@ -6,7 +6,7 @@ CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
 USE="${USE} hardfp legacy_keyboard legacy_power_button neon"
-USE="${USE} xlib-glx"
+USE="${USE} -opengl opengles"
 USE="${USE} kernel-3_14 device_tree"
 
 # PORTAGE_BINHOST is pulled in from prebuilt.conf
