--- a/overlay-arm64-generic/make.conf
+++ b/overlay-arm64-generic/make.conf
@@ -6,7 +6,7 @@ CHROMEOS_KERNEL_SPLITCONFIG="chromiumos-arm64"
 ARM_FPU=neon
 
 USE="${USE} legacy_keyboard legacy_power_button neon"
-USE="${USE} xlib-glx"
+USE="${USE} -opengl opengles"
 USE="${USE} kernel-3_14 device_tree"
 
 # No -fstack-protector on aarch64 yet
