--- a/overlay-variant-panther-embedded/make.conf
+++ b/overlay-variant-panther-embedded/make.conf
@@ -2,5 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-variant-panther-embedded/panther_minimal.config"
+
 # Use pam so that sudo is pulled in properly.
 USE="${USE} pam"
