nyan_freon: Move USE flags from make.conf to package.use
BUG=chromium:381257
TEST=builds locally

Change-Id: If19f8f81f3a9335bddb75183282dee7c8ad5c445
Reviewed-on: https://chromium-review.googlesource.com/205797
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Tested-by: Stéphane Marchesin <marcheu@chromium.org>

--- a/overlay-variant-nyan-freon/make.conf
+++ b/overlay-variant-nyan-freon/make.conf
@@ -4,7 +4,7 @@
 
 USE="${USE} nyan_big ozone -coreboot -bootimage"
 
-USE="${USE} egl gbm gles2 -opengl opengles shared-glapi -X"
+USE="${USE} -opengl opengles -X"
 
 OZONE_PLATFORM="dri gbm"
 
