--- a/overlay-gizmo/make.conf
+++ b/overlay-gizmo/make.conf
@@ -1,14 +1,26 @@
-# Copyright (c) 2014 The Chromium OS Authors. All rights reserved.
+# Copyright 2014 The Chromium OS Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-CHROMEOS_KERNEL_SPLITCONFIG="chromiumos-x86_64"
+CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
 CHROMEOS_KERNEL_ARCH="x86_64"
 
-USE="${USE} gizmo"
-USE="${USE} kernel-3_10"
+# Panther USE flags.
+USE="${USE} -display_backlight legacy_keyboard legacy_power_button lockvt"
+USE="${USE} kernel-3_8"
+USE="${USE} panther -subpixel_rendering"
 
-# TODO: remove after board is stable
-USE="${USE} fwserial pcserial"
+# Make stuff small.
+USE="${USE} -cellular -cros_disks -cros_p2p -debugd -opengl -vpn"
 
-VIDEO_CARDS="${VIDEO_CARDS} radeon"
+# Defining USE flags for the board.
+USE="${USE} buffet"
+
+# Tune for panther i7
+MARCH_TUNE="-march=corei7"
+
+# Use pam so passwordless logins correctly work.
+USE="${USE} pam"
+
+# Activate the serial console and vt1.
+TTY_CONSOLE="${TTY_CONSOLE} ttyS0 vt1"
