veyron: Prepare for a splitconfig
Prepare to have an unofficial chromiumos-rockchip splitconfig for
veyron boards.

BUG=chrome-os-partner:30167
TEST=With cros-kernel2.eclass change see fallback config picked up

Change-Id: I9eb48000c1b7223cd4bfded092d3c3febe2fb5e0
Reviewed-on: https://chromium-review.googlesource.com/206367
Tested-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Katie Roberts-Hoffman <katierh@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -2,6 +2,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+CHROMEOS_KERNEL_SPLITCONFIG="chromiumos-rockchip"
+
 ARM_FPU=neon
 
 # TODO: should mod -mtune to cortex-a12, when binutils supported.
