veyron: Choose the right video card
Current docs say that this is the right magic to get xf86-video-armsoc
working.

BUG=chrome-os-partner:30167
TEST=cros_workon-veyron start xf86-video-armsoc, build, boot

Change-Id: Id378c98b462867a5c04e0958b796ce26028255c6
Reviewed-on: https://chromium-review.googlesource.com/206392
Reviewed-by: Katie Roberts-Hoffman <katierh@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>
Tested-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -12,3 +12,5 @@ CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 USE="${USE} hardfp legacy_keyboard legacy_power_button neon"
 # Use rk32 as chipset name
 USE="${USE} rk32"
+
+VIDEO_CARDS="${VIDEO_CARDS} armsoc rockchip"
