--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -14,4 +14,6 @@ CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 USE="${USE} device_tree hardfp legacy_keyboard legacy_power_button neon kernel-3_14"
 USE="${USE} -opengl opengles rk32"
 
+TTY_CONSOLE="${TTY_CONSOLE} ttyS2"
+
 VIDEO_CARDS="${VIDEO_CARDS} armsoc rockchip"
