--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -9,7 +9,7 @@ MARCH_TUNE="-march=armv7-a -mtune=cortex-a15 -mfpu=${ARM_FPU} -mfloat-abi=hard"
 CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
-USE="${USE} hardfp legacy_keyboard legacy_power_button neon"
+USE="${USE} device_tree hardfp legacy_keyboard legacy_power_button neon"
 USE="${USE} -opengl opengles rk32"
 
 VIDEO_CARDS="${VIDEO_CARDS} armsoc rockchip"
