--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -10,7 +10,6 @@ CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
 USE="${USE} hardfp legacy_keyboard legacy_power_button neon"
-# Use rk32 as chipset name
-USE="${USE} rk32"
+USE="${USE} -opengl opengles rk32"
 
 VIDEO_CARDS="${VIDEO_CARDS} armsoc rockchip"
