veyron: add firmware-related USE flags to make.conf
This adds USE flags to make.conf which are necessary
to build chromeos-bootimage.

BUG=chrome-os-partner:29778,chrome-os-partner:28940
BRANCH=veyron
TEST='emerge chromeos-bootimage' pulls in chromeos-ec, libpayload,
vboot_reference, depthcharge, and coreboot

Change-Id: Ia7e089f0c931b103c86ae3c9a2c3a1794c9d3029
Reviewed-on: https://chromium-review.googlesource.com/207212
Reviewed-by: Julius Werner <jwerner@chromium.org>
Commit-Queue: David Hendricks <dhendrix@chromium.org>
Tested-by: David Hendricks <dhendrix@chromium.org>

--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -13,6 +13,7 @@ CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
 USE="${USE} device_tree hardfp legacy_keyboard legacy_power_button neon kernel-3_14"
 USE="${USE} -opengl opengles rk32"
+USE="${USE} depthcharge cros_ec bootimage"
 
 TTY_CONSOLE="${TTY_CONSOLE} ttyS2"
 
