Moblab: Clean up binary logs if they exist.
For auto-updated users of Moblab this changes deletes the binary
logs that have since been disabled.

Also reduced the number of days to hold onto job logs in order to
prevent the stateful partition from filing up from running too many
jobs.

BUG=chromium:382559
TEST=ran moblab with binary logging on, then updated it via cros_flash,
and ensured the database still worked.

Change-Id: Ided94030463e9571a1e1759e397c0e7c72322a9a
Reviewed-on: https://chromium-review.googlesource.com/208558
Reviewed-by: Simran Basi <sbasi@chromium.org>
Commit-Queue: Simran Basi <sbasi@chromium.org>
Tested-by: Simran Basi <sbasi@chromium.org>
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>

--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-database-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-database-init.conf
@@ -27,6 +27,11 @@ pre-start script
     chown -R mysql:mysql "${MYSQL_LOG_DIR}"
   fi
 
+  # Clean up the binary logs if they still exist.
+  if [ -e "${MYSQL_LIB_DIR}/mysqld-bin.000001" ]; then
+    rm "${MYSQL_LIB_DIR}"/mysqld-bin.*
+  fi
+
   # The below command won't work if the database has already been installed
   # as it is not supplying the set password.
   /usr/share/mysql/scripts/mysql_install_db --user=mysql \
