Moblab: Move off of using cros_disks to running mount.
cros-disks is dropping support for ext4 which Moblab uses to mount
the devserver's external storage.

This CL moves off of using cros-disks to mount the drive to using
the mount command instead.

BUG=chromium:315401
TEST=Verified that the external storage is mounted properly and the
devserver is running as expected. Ensured not having the drive
inserted fails as expected as well.

Change-Id: I09dda238e3babe82a62a4812fe0327ea55c211ce
Reviewed-on: https://chromium-review.googlesource.com/209153
Reviewed-by: Simran Basi <sbasi@chromium.org>
Commit-Queue: Simran Basi <sbasi@chromium.org>
Tested-by: Simran Basi <sbasi@chromium.org>

--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-devserver-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-devserver-init.conf
@@ -7,8 +7,8 @@ author        "chromium-os-dev@chromium.org"
 
 start on started moblab-apache-init and started cros-disks
 
-env MOUNT_DIR=/media/removable/MOBLAB-STORAGE
-env STATIC_DIR=/media/removable/MOBLAB-STORAGE/static
+env MOUNT_DIR=/mnt/moblab
+env STATIC_DIR=/mnt/moblab/static
 export STATIC_DIR
 env LOG_DIR=/var/log/devserver
 
@@ -23,23 +23,15 @@ pre-start script
     logger -t "${UPSTART_JOB}" "and reboot."
     exit 1
   fi
-  dbus-send --print-reply --system --dest=org.chromium.CrosDisks \
-    /org/chromium/CrosDisks org.chromium.CrosDisks.Mount \
-    string:"${usb_drive}" string:"ext4"  array:string:"rw"
-  # Wait for the disk to be mounted before creating the static directory.
-  reps=0
-  while [ ! -d "${MOUNT_DIR}" ]; do
-    if [ ${reps} -eq 30 ]; then
-      logger -t "${UPSTART_JOB}" "Mount directory: ${MOUNT_DIR} did not appear"
-      logger -t "${UPSTART_JOB}" "with in 30 seconds. Please reconnect drive"
-      logger -t "${UPSTART_JOB}" "and reboot."
-      exit 1
-    fi
-    : $((reps += 1))
-    sleep 1
-  done
+
+  if ! mount "${usb_drive}" "${MOUNT_DIR}" -o noexec,nodev,nosuid; then
+    logger -t "${UPSTART_JOB}" "Mounting of ${usb_drive} onto ${MOUNT_DIR}"
+    logger -t "${UPSTART_JOB}" "failed. Please reconnect drive and reboot."
+    exit 1
+  fi
+
   mkdir -p "${STATIC_DIR}"
-  chown -R moblab:moblab "${STATIC_DIR}"
+  chown -R moblab:moblab "${MOUNT_DIR}"
   mkdir -p "${LOG_DIR}"
   chown -R moblab:moblab "${LOG_DIR}"
 end script
