nyan: move opengl and opengles USE from make.conf to make.defaults
USE flags set in make.conf have precedence over per-package flags set
in package.use, but USE flags set in make.defaults do not.

Moving the opengl* USE flags allows us to build most packages with
"-opengl opengles", but still build select packages with "opengl opengles"
using package.use.

In particular, this will allow us to stop building the xorg-server with
GLX and DRI1 support when building for EGL/OpenGLES [0] (ie for
USE=opengles).  This works as-is for the vast majority of boards.
However, for nyan_freon we still need to build xorg-server with GLX & DRI
since xf86-video-nouveau currently still requires xorg-server to include
GLX & DRI even when the rest of the system uses EGL/OpenGLES.

[0] https://chromium-review.googlesource.com/#/c/200032/

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=chromium:390985,chromium:340268
TEST=emerge-nyan_freon --unmerge xorg-server xf86-video-nouveau
TEST=emerge-nyan_freon xorg-server xf86-video-nouveau
TEST=./build_packages --board=nyan
TEST=./build_packages --board=nyan_freon

Change-Id: Ie9d4b2d92cfd2f39b05efeb568f2829d87517fc5
Reviewed-on: https://chromium-review.googlesource.com/208922
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/overlay-nyan/make.conf
+++ b/overlay-nyan/make.conf
@@ -19,7 +19,7 @@ EXTRA_BUILD_ARGS="proprietary_codecs=1"
 # board-specific tinkering of these USE flags.
 # Check overlays/overlay-nyan/profiles to see if this is going on in the
 # selected profile.
-USE="${USE} cros_ec device_tree hardfp neon -opengl opengles"
+USE="${USE} cros_ec device_tree hardfp neon"
 USE="${USE} kernel-3_10 depthcharge unified_depthcharge t124_xusb_fw"
 USE="${USE} tegra tegra-ldk tegra124-venice2_dtb wireless38"
 USE="${USE} cb_legacy_uboot"
