--- a/overlay-variant-nyan-freon/make.conf
+++ b/overlay-variant-nyan-freon/make.conf
@@ -4,7 +4,7 @@
 
 USE="${USE} nyan_big ozone -coreboot -bootimage"
 
-USE="${USE} -opengl opengles -X"
+USE="${USE} -X"
 
 OZONE_PLATFORM="dri gbm"
 
