--- a/overlay-gizmo/make.conf
+++ b/overlay-gizmo/make.conf
@@ -2,8 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-CHROMEOS_KERNEL_SPLITCONFIG="chromeos-intel-pineview"
-CHROMEOS_KERNEL_ARCH="x86_64"
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-variant-panther-embedded/panther_minimal.config"
 
 # Panther USE flags.
 USE="${USE} -display_backlight legacy_keyboard legacy_power_button lockvt"
