link_freon: Simplify USE flags
Disable X globally now that it works, and swap opengl for opengles.

BUG=chromium:371478
TEST=build_packages --board link_freon

Change-Id: I8286abb7ba563b96cbe1a1a0f592086c317e59b0
Reviewed-on: https://chromium-review.googlesource.com/209574
Commit-Queue: Michael Spang <spang@chromium.org>
Tested-by: Michael Spang <spang@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>

--- a/overlay-variant-link-freon/make.conf
+++ b/overlay-variant-link-freon/make.conf
@@ -3,8 +3,7 @@
 # found in the LICENSE file.
 
 # Disable X11
-# TODO(spang): This is broken.
-#USE="${USE} -X"
+USE="${USE} -X"
 
 # Disable ibus
 USE="${USE} -ibus"
@@ -23,3 +22,6 @@ USE="${USE} evdev_gestures"
 
 # Remove coreboot image as this breaks the build.
 USE="${USE} -coreboot -bootimage"
+
+# Use opengles instead of opengl
+USE="${USE} -opengl opengles"
