Revert "link_freon: Simplify USE flags"
This reverts commit bad96d5f6f408ad2bf2d17fb878c78b6b9ed15ba.

This change seems to cause failures in link_freon canary.

FAILED: if [ ! -e lib/libpeerconnection.so -o ! -e lib/libpeerconnection.so.TOC ]; then x86_64-cros-linux-gnu-g++ -B/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+target_toolchain/usr/x86_64-pc-linux-gnu/x86_64-cros-linux-gnu/binutils-bin/2.22-gold -shared -Wl,-z,now -Wl,-z,relro -pthread -Wl,-z,noexecstack -fPIC -L/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+sysroot_chromeos-base_chromeos-chrome.tar.xz/usr/lib64 -m64 --sysroot=/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+sysroot_chromeos-base_chromeos-chrome.tar.xz -L/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+sysroot_chromeos-base_chromeos-chrome.tar.xz/lib64 -Wl,-rpath-link=/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+sysroot_chromeos-base_chromeos-chrome.tar.xz/lib64 -L/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+sysroot_chromeos-base_chromeos-chrome.tar.xz/usr/lib64 -Wl,-rpath-link=/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cachert4NeE/cache/chrome-sdk/tarballs/link_freon+__b__cbuild__internal_master__buildbot_archive__link_freon-release__R38-6110.0.0+sysroot_chromeos-base_chromeos-chrome.tar.xz/usr/lib64 -L/tmp/cbuildbot-tmpgNoTXO/chrome-sdk-cache

--- a/overlay-variant-link-freon/make.conf
+++ b/overlay-variant-link-freon/make.conf
@@ -3,7 +3,8 @@
 # found in the LICENSE file.
 
 # Disable X11
-USE="${USE} -X"
+# TODO(spang): This is broken.
+#USE="${USE} -X"
 
 # Disable ibus
 USE="${USE} -ibus"
@@ -22,6 +23,3 @@ USE="${USE} evdev_gestures"
 
 # Remove coreboot image as this breaks the build.
 USE="${USE} -coreboot -bootimage"
-
-# Use opengles instead of opengl
-USE="${USE} -opengl opengles"
