[moblab] boto file permissions & apache user reboot rights.
This change ensures that the boto file is owned by user moblab and
the moblab group has read/write access and creates an empty placeholder
file should the boto key not exist. This will be used by apache to
write in the boto key should one be uploaded via the AFE.

User apache now has sudo permissions to run reboot which is required
after updating autotest's config settings.

BUG=chromium:396694
TEST=After powerwash, a boto key can be uploaded. And verified that
if a boto key is placed manually, and the moblab is rebooted, the
same key exists with the appropriate permissions.

Change-Id: I7cdab17b9b28f3a3a8989c6c1a2e7a99c4044085
Reviewed-on: https://chromium-review.googlesource.com/212322
Reviewed-by: Simran Basi <sbasi@chromium.org>
Tested-by: Simran Basi <sbasi@chromium.org>
Commit-Queue: Simran Basi <sbasi@chromium.org>

--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-homedir-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-homedir-init.conf
@@ -20,4 +20,11 @@ script
     cp /root/.ssh/* "${MOBLAB_SSH_DIR}"
     chown -R moblab:moblab "${MOBLAB_SSH_DIR}"
   fi
+
+  # Create a placeholder for the boto file.
+  MOBLAB_BOTO_FILE=/home/moblab/.boto
+  touch "${MOBLAB_BOTO_FILE}"
+  chown moblab:moblab "${MOBLAB_BOTO_FILE}"
+  chmod 660 "${MOBLAB_BOTO_FILE}"
+
 end script
