--- a/overlay-arm64-generic/toolchain.conf
+++ b/overlay-arm64-generic/toolchain.conf
@@ -1,1 +1,1 @@
-aarch64-cros-linux-gnu        { "sdk":false, "crossdev":"--genv USE='-hardened' --b ~2.24 --l ~2.18 --ex-gdb" }
+aarch64-cros-linux-gnu        { "sdk":false, "crossdev":"--genv USE='-hardened' --ex-gdb" }
