--- a/overlay-arm-generic/make.conf
+++ b/overlay-arm-generic/make.conf
@@ -5,6 +5,10 @@ MARCH_TUNE="-march=armv7-a -mtune=cortex-a15 -mfpu=${ARM_FPU} -mfloat-abi=hard"
 CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
+# Include many firmwares as this is a "generic" board and might run on a
+# wide variety of platforms with who knows what kind of hardware.
+LINUX_FIRMWARE="${LINUX_FIRMWARE} iwlwifi-all"
+
 USE="${USE} hardfp legacy_keyboard legacy_power_button neon"
 USE="${USE} -opengl opengles"
 USE="${USE} kernel-3_14 device_tree"
