--- a/overlay-arm64-generic/make.conf
+++ b/overlay-arm64-generic/make.conf
@@ -5,6 +5,10 @@ CHROMEOS_KERNEL_SPLITCONFIG="chromiumos-arm64"
 
 ARM_FPU=neon
 
+# Include many firmwares as this is a "generic" board and might run on a
+# wide variety of platforms with who knows what kind of hardware.
+LINUX_FIRMWARE="${LINUX_FIRMWARE} iwlwifi-all"
+
 USE="${USE} legacy_keyboard legacy_power_button neon"
 USE="${USE} -opengl opengles"
 USE="${USE} kernel-3_14 device_tree"
