--- a/overlay-x32-generic/make.conf
+++ b/overlay-x32-generic/make.conf
@@ -5,6 +5,10 @@ CHROMEOS_KERNEL_ARCH="x86_64"
 # MMX, SSE, SSE2, and SSE3.
 MARCH_TUNE="-march=x86-64 -msse3"
 
+# Include many firmwares as this is a "generic" board and might run on a
+# wide variety of platforms with who knows what kind of hardware.
+LINUX_FIRMWARE="${LINUX_FIRMWARE} iwlwifi-all"
+
 USE="${USE} legacy_keyboard legacy_power_button sse kernel-3_14"
 
 # This is only for the kernel and can be dropped once we merge:
