--- a/overlay-x86-generic/make.conf
+++ b/overlay-x86-generic/make.conf
@@ -6,7 +6,7 @@ MARCH_TUNE="-march=i686 -mfpmath=sse -mmmx -msse -msse2 -msse3"
 
 # Include many firmwares as this is a "generic" board and might run on a
 # wide variety of platforms with who knows what kind of hardware.
-LINUX_FIRMWARE="iwlwifi-all"
+LINUX_FIRMWARE="${LINUX_FIRMWARE} iwlwifi-all"
 
 USE="${USE} legacy_keyboard legacy_power_button kernel-3_14"
 
