link_freon: Enable USE=xkbcommon
We'll use this flag to pull in keyboard layout support using
libxkbcommon under freon/ozone.

BUG=chromium:362698
TEST=build_packages --board link_freon
CQ-DEPEND=CL:213144

Change-Id: Iea0a22b898682a0d667522c8c306e0b199bf3ee0
Reviewed-on: https://chromium-review.googlesource.com/213220
Reviewed-by: Shu Chen <shuchen@chromium.org>
Reviewed-by: Alex Sakhartchouk <alexst@chromium.org>
Tested-by: Michael Spang <spang@chromium.org>
Commit-Queue: Michael Spang <spang@chromium.org>

--- a/overlay-variant-link-freon/make.conf
+++ b/overlay-variant-link-freon/make.conf
@@ -20,3 +20,6 @@ USE="${USE} drm_atomic"
 
 # Enable gestures support in Chrome.
 USE="${USE} evdev_gestures"
+
+# Enable xkbcommon in Chrome for keyboard layouts.
+USE="${USE} xkbcommon"
