Add virtio network driver to panther_minimal.config
This is a small kernel module and is required for networking to run
while running under a vm. Add it to the panther minimal kernel config.

BUG=chromium:405276
TEST=virtio_net.ko is present on the rootfs
TEST=gizmo image under qemu now has networking

Change-Id: Ief1c0dc0cfe8a37e24c508bd4cb45970b04326cc
Reviewed-on: https://chromium-review.googlesource.com/213243
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Tested-by: Gaurav Shah <gauravsh@chromium.org>
Commit-Queue: Gaurav Shah <gauravsh@chromium.org>

--- a/overlay-variant-panther-embedded/panther_minimal.config
+++ b/overlay-variant-panther-embedded/panther_minimal.config
@@ -1277,7 +1277,7 @@ CONFIG_MII=y
 # CONFIG_NET_POLL_CONTROLLER is not set
 CONFIG_TUN=m
 CONFIG_VETH=m
-# CONFIG_VIRTIO_NET is not set
+CONFIG_VIRTIO_NET=m
 # CONFIG_ARCNET is not set
 
 #
