link_freon: Disable console on tty2
It fails repeatedly with the kernel driver gone.

BUG=chromium:406208
TEST=boot on link_freon

Change-Id: I909d1901ef2c8cadd084eb99a3c259a966f7d85c
Reviewed-on: https://chromium-review.googlesource.com/213820
Reviewed-by: Alex Sakhartchouk <alexst@chromium.org>
Tested-by: Michael Spang <spang@chromium.org>
Commit-Queue: Michael Spang <spang@chromium.org>

--- a/overlay-variant-link-freon/make.conf
+++ b/overlay-variant-link-freon/make.conf
@@ -12,6 +12,9 @@ USE="${USE} -ibus"
 # Ozone platforms.
 OZONE_PLATFORM="dri gbm"
 
+# Disable tty2 console.
+TTY_CONSOLE=""
+
 # Enable ozone in Chrome.
 USE="${USE} ozone"
 
