nyan_freon: Rationalize X11/freon/ozone flags
Add workaround for crbug.com/403905, enable gestures, enable xkbcommon.

TEST=build_package --board nyan_freon
BUG=chromium:403905

Change-Id: Iab58c0a79cc9018a83dc2237cb12ab11fcaf8be0
Reviewed-on: https://chromium-review.googlesource.com/213825
Reviewed-by: Alex Sakhartchouk <alexst@chromium.org>
Commit-Queue: Michael Spang <spang@chromium.org>
Tested-by: Michael Spang <spang@chromium.org>

--- a/overlay-variant-nyan-freon/make.conf
+++ b/overlay-variant-nyan-freon/make.conf
@@ -2,12 +2,20 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-USE="${USE} nyan_big ozone -coreboot -bootimage"
-
-USE="${USE} -X"
-
-OZONE_PLATFORM="dri gbm"
+USE="${USE} nyan_big -coreboot -bootimage"
 
 VIDEO_CARDS="${VIDEO_CARDS} nouveau"
 
 EC_FIRMWARE="big"
+
+# Enable ozone in Chrome.
+USE="${USE} ozone"
+
+# Ozone platforms to build into Chrome.
+OZONE_PLATFORM="dri gbm"
+
+# Enable gestures support in Chrome.
+USE="${USE} evdev_gestures"
+
+# Enable xkbcommon in Chrome for keyboard layouts.
+USE="${USE} xkbcommon"
