link_freon: Simplify X11/freon/ozone flags
Turn off X by default in make.defaults & override in package.use for
chrome so that webrtc still links. This results in the same flags,
but with fewer overrides in package.use. Also disable some tests
that depend on X11.

BUG=none
TEST=build_packages --board link_freon

Change-Id: Ia6fd202079402cc917bca3daaca679c7dd343e61
Reviewed-on: https://chromium-review.googlesource.com/213826
Reviewed-by: Alex Sakhartchouk <alexst@chromium.org>
Commit-Queue: Michael Spang <spang@chromium.org>
Tested-by: Michael Spang <spang@chromium.org>

--- a/overlay-variant-link-freon/make.conf
+++ b/overlay-variant-link-freon/make.conf
@@ -2,21 +2,20 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-# Disable X11
-# TODO(spang): This is broken.
-#USE="${USE} -X"
-
 # Disable ibus
 USE="${USE} -ibus"
 
-# Ozone platforms.
-OZONE_PLATFORM="dri gbm"
+# Use opengles instead of opengl
+USE="${USE} -opengl opengles"
 
 # Disable tty2 console.
 TTY_CONSOLE=""
 
 # Enable ozone in Chrome.
 USE="${USE} ozone"
+
+# Ozone platforms.
+OZONE_PLATFORM="dri gbm"
 
 # Enable atomic modesetting.
 USE="${USE} drm_atomic"
