--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -11,9 +11,8 @@ MARCH_TUNE="-march=armv7-a -mtune=cortex-a15 -mfpu=${ARM_FPU} -mfloat-abi=hard"
 CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
-USE="${USE} device_tree hardfp legacy_keyboard legacy_power_button neon kernel-3_14"
-USE="${USE} -opengl opengles rk32"
-USE="${USE} depthcharge cros_ec bootimage"
+USE="${USE} bootimage cros_ec depthcharge device_tree hardfp kernel-3_14"
+USE="${USE} legacy_keyboard legacy_power_button neon -opengl opengles rk32"
 
 TTY_CONSOLE="${TTY_CONSOLE} ttyS2"
 
