--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -11,8 +11,9 @@ MARCH_TUNE="-march=armv7-a -mtune=cortex-a15 -mfpu=${ARM_FPU} -mfloat-abi=hard"
 CFLAGS="${CFLAGS} ${MARCH_TUNE}"
 CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 
-USE="${USE} bootimage cros_ec depthcharge device_tree hardfp kernel-3_14"
-USE="${USE} legacy_keyboard legacy_power_button neon -opengl opengles rk32"
+USE="${USE} bootimage cros_ec depthcharge device_tree gpu_sandbox_start_early"
+USE="${USE} hardfp kernel-3_14 legacy_keyboard legacy_power_button neon"
+USE="${USE} -opengl opengles rk32"
 
 TTY_CONSOLE="${TTY_CONSOLE} ttyS2"
 
