--- a/overlay-variant-daisy-freon/make.conf
+++ b/overlay-variant-daisy-freon/make.conf
@@ -5,8 +5,11 @@
 # Enable ozone in Chrome.
 USE="${USE} ozone"
 
-# Ozone platforms.
+# Ozone platforms to build into Chrome.
 OZONE_PLATFORM="dri"
+
+# Of the above, platform to use by default at runtime.
+OZONE_PLATFORM_DEFAULT="dri"
 
 # Enable gestures support in Chrome.
 USE="${USE} evdev_gestures"
