--- a/overlay-variant-nyan-freon/make.conf
+++ b/overlay-variant-nyan-freon/make.conf
@@ -14,6 +14,9 @@ USE="${USE} ozone"
 # Ozone platforms to build into Chrome.
 OZONE_PLATFORM="dri gbm"
 
+# Of the above, platform to use by default at runtime.
+OZONE_PLATFORM_DEFAULT="dri"
+
 # Enable gestures support in Chrome.
 USE="${USE} evdev_gestures"
 
