x86-{alex,zgb}_he: rename board repos
Change the repo name to match the $BOARD value.  Need to land this
separately as some internal repos are relying on these for parents.

BUG=chromium:386495
TEST=`cbuildbot x86-{alex,zgb}_he-{full,release}` pass
CQ-DEPEND=CL:*175281
CQ-DEPEND=CL:*175360

Change-Id: I9a70b4afbdeaca73536a401b01b49aac43232803
Reviewed-on: https://chromium-review.googlesource.com/216536
Reviewed-by: Steve Fung <stevefung@chromium.org>
Commit-Queue: Mike Frysinger <vapier@chromium.org>
Tested-by: Mike Frysinger <vapier@chromium.org>

--- a/overlay-variant-x86-zgb-he/metadata/layout.conf
+++ b/overlay-variant-x86-zgb-he/metadata/layout.conf
@@ -1,5 +1,5 @@
 masters = portage-stable chromiumos
 profile-formats = portage-2
-repo-name = x86-zgb-he
+repo-name = x86-zgb_he
 thin-manifests = true
 use-manifests = true
