auron: Source prebuilt.conf from make.conf
BUG=None
TEST=emerge-auron --getbinpkg chromeos-mrc

Change-Id: I44888e8616b8723705097a9848a499db7116a7ef
Reviewed-on: https://chromium-review.googlesource.com/215784
Commit-Queue: Shawn Nematbakhsh <shawnn@chromium.org>
Tested-by: Shawn Nematbakhsh <shawnn@chromium.org>
Reviewed-by: Bernie Thompson <bhthompson@chromium.org>

--- a/overlay-auron/make.conf
+++ b/overlay-auron/make.conf
@@ -16,3 +16,6 @@ MARCH_TUNE="-march=corei7"
 
 # Uncomment this line to activate the serial port.
 #TTY_CONSOLE="${TTY_CONSOLE} ttyS0"
+
+# PORTAGE_BINHOST is pulled in from prebuilt.conf
+source prebuilt.conf
