freon: Disable VT lock on suspend
If there are no VTs, there's nothing to lock.

BUG=chromium:409959
TEST=none

Change-Id: Ie2348f0f87f8226a580cb8d57c022c3c08ca7874
Reviewed-on: https://chromium-review.googlesource.com/215982
Reviewed-by: Daniel Erat <derat@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>
Commit-Queue: Michael Spang <spang@chromium.org>
Tested-by: Michael Spang <spang@chromium.org>

--- a/overlay-variant-link-freon/make.conf
+++ b/overlay-variant-link-freon/make.conf
@@ -28,3 +28,6 @@ USE="${USE} evdev_gestures"
 
 # Enable xkbcommon in Chrome for keyboard layouts.
 USE="${USE} xkbcommon"
+
+# Disable VT lock, since we've removed the VT driver.
+USE="${USE} -lockvt"
