[moblab] Add moblab-external-storage-init upstart job.
Added a new upstart script to handle detecting, mounting and setting
up the required external usb drive for moblab.

Moves autotest results directory to external storage.
* Creates external results directory on the external storage.
* If the old directory exists, copy over its contents and delete it.
* If /usr/local/autotest/results does not exist create a symlink
  pointing to /mnt/moblab/results

BUG=chromium:410003
TEST=Installed image on a fresh "powerwashed" moblab and a moblab
with a results directory already with data, ensured scheduler
and gs_offloader process are running properly. Ran moblab_SmokeSuite
end to end test as well.

Change-Id: I8cc421fcad3ef5693f5976e63d4367c3e3153f74
Reviewed-on: https://chromium-review.googlesource.com/216298
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Simran Basi <sbasi@chromium.org>
Commit-Queue: Simran Basi <sbasi@chromium.org>

--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-apache-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-apache-init.conf
@@ -5,7 +5,8 @@
 description   "Start apache for moblab."
 author        "chromium-os-dev@chromium.org"
 
-start on started moblab-database-init
+start on (started moblab-database-init and
+          stopped moblab-external-storage-init RESULT=ok)
 
 pre-start script
   APACHE_LOG_DIR=/var/log/apache2
