--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-devserver-cleanup-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-devserver-cleanup-init.conf
@@ -5,7 +5,8 @@
 description   "Clean up the devserver static directory daily."
 author        "chromium-os-dev@chromium.org"
 
-start on started moblab-devserver-init
+start on (started moblab-devserver-init and
+          stopped moblab-external-storage-init RESULT=ok)
 
 script
   if [ -z "${STATIC_DIR}" ] ; then
