--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-devserver-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-devserver-init.conf
@@ -5,33 +5,12 @@
 description   "Start local devserver."
 author        "chromium-os-dev@chromium.org"
 
-start on started moblab-apache-init and started cros-disks
+start on (stopped moblab-apache-init and
+          stopped moblab-external-storage-init RESULT=ok)
 
-env MOUNT_DIR=/mnt/moblab
-env STATIC_DIR=/mnt/moblab/static
-export STATIC_DIR
 env LOG_DIR=/var/log/devserver
 
 pre-start script
-  # REQUIRES A USB DRIVE WITH LABEL "MOBLAB-STORAGE"
-  usb_drive=$(readlink -f /dev/disk/by-label/MOBLAB-STORAGE)
-  if [ -n "${usb_drive}" ]; then
-    logger -t "${UPSTART_JOB}" "Launching devserver using ${usb_drive}."
-  else
-    logger -t "${UPSTART_JOB}" "No disk labeled MOBLAB-STORAGE found!"
-    logger -t "${UPSTART_JOB}" "Please insert a properly configured drive"
-    logger -t "${UPSTART_JOB}" "and reboot."
-    exit 1
-  fi
-
-  if ! mount "${usb_drive}" "${MOUNT_DIR}" -o noexec,nodev,nosuid; then
-    logger -t "${UPSTART_JOB}" "Mounting of ${usb_drive} onto ${MOUNT_DIR}"
-    logger -t "${UPSTART_JOB}" "failed. Please reconnect drive and reboot."
-    exit 1
-  fi
-
-  mkdir -p "${STATIC_DIR}"
-  chown -R moblab:moblab "${MOUNT_DIR}"
   mkdir -p "${LOG_DIR}"
   chown -R moblab:moblab "${LOG_DIR}"
 end script
