--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-scheduler-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-scheduler-init.conf
@@ -5,8 +5,9 @@
 description   "Start the autotest scheduler."
 author        "chromium-os-dev@chromium.org"
 
-start on stopped moblab-apache-init
+start on (stopped moblab-apache-init and
+          stopped moblab-external-storage-init RESULT=ok)
 respawn
 
 exec sudo -u moblab /usr/local/autotest/scheduler/monitor_db.py \
-  /usr/local/autotest/results
+  "${ATEST_RESULTS_DIR}"
