--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-gsoffloader_s-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-gsoffloader_s-init.conf
@@ -5,7 +5,7 @@
 description   "Kick off the gs_offloader to clean up the hosts folder."
 author        "chromium-os-dev@chromium.org"
 
-start on stopped autotest_setup
+start on started moblab-scheduler-init
 respawn
 
 exec sudo -u moblab /usr/local/autotest/site_utils/gs_offloader.py -s -o --days_old=7
