[moblab]: Disable tests whose baselines don't match Moblab.
These tests are to be disabled till crbug.com/406013 is completed.

BUG=chromium:412430
TEST=trybot paladin runs.

Change-Id: Ic166a4ef141724210be53365611868bedb2fc421
Reviewed-on: https://chromium-review.googlesource.com/217340
Reviewed-by: Simran Basi <sbasi@chromium.org>
Commit-Queue: Simran Basi <sbasi@chromium.org>
Tested-by: Simran Basi <sbasi@chromium.org>

--- a/overlay-variant-stumpy-moblab/make.conf
+++ b/overlay-variant-stumpy-moblab/make.conf
@@ -7,4 +7,16 @@
 # features/moblab/*
 
 USE="${USE} -coreboot"
+# TODO crbug.com/412430 (sbasi) - Re-enable these tests once overlay specific
+# test baselines are supported.
+USE="
+	${USE}
+	-tests_network_DefaultProfileCreation
+	-tests_network_DefaultProfileServices
+	-tests_platform_FilePerms
+	-tests_security_AccountsBaseline
+	-tests_security_Firewall
+	-tests_security_NetworkListeners
+	-tests_security_RootfsStatefulSymlinks
+"
 APACHE2_MODULES="${APACHE2_MODULES} version"
