[moblab] Wipe results directory on empty database.
Currently when you powerwash moblab, you're stuck with a fresh
db but a bunch of junk result files. These will conflict with new
jobs you run.

In order to address this, wipe the results directory on any boot
that has no jobs in the database.

BUG=chromium:413905
TEST=Powerwashed and results were cleaned up.

Change-Id: I70ba363609ad725419063854d11003406ccbb0a7
Reviewed-on: https://chromium-review.googlesource.com/217936
Tested-by: Simran Basi <sbasi@chromium.org>
Reviewed-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Richard Barnette <jrbarnette@chromium.org>
Commit-Queue: Simran Basi <sbasi@chromium.org>

--- a/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-external-storage-init.conf
+++ b/overlay-variant-stumpy-moblab/chromeos-base/chromeos-bsp-moblab/files/init/moblab-external-storage-init.conf
@@ -5,7 +5,7 @@
 description   "Mount and setup moblab external storage."
 author        "chromium-os-dev@chromium.org"
 
-start on started cros-disks and stopped autotest_setup
+start on started cros-disks and started moblab-database-init
 normal exit 0
 
 env MOUNT_DIR=/mnt/moblab
@@ -45,6 +45,13 @@ script
   if [ ! -e "${ATEST_RESULTS_DIR}" ]; then
     logger -t "${UPSTART_JOB}" "Creating autotest results dir symlink."
     ln -s "${EXTERNAL_RESULTS_DIR}" "${ATEST_RESULTS_DIR}"
+  fi
+
+  # If the database is empty clear out any old files in the results directory.
+  local jobcount="$(mysql -u root -pmoblab_db_passwd -D chromeos_autotest_db \
+                    -e 'select count(*) from afe_jobs' | tail -1)"
+  if [ "${jobcount}" = "0" ]; then
+    rm -rf "${EXTERNAL_RESULTS_DIR}"/*
   fi
 
   mkdir -p "${STATIC_DIR}"
