Added touchview USE flag to glimmer & clapper overlays.
BUG=chromium:371608
TEST=Verified a glimmer device would lock immediately when the switch was enabled and would proceed to shutdown if
power button was held down.

CQ-DEPEND=CL:218513

Change-Id: Iecd663c48ab8865fb3b3b5d9e758a4272679bfcc
Reviewed-on: https://chromium-review.googlesource.com/218590
Reviewed-by: Daniel Erat <derat@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Ben Ruthig <bruthig@chromium.org>
Tested-by: Ben Ruthig <bruthig@chromium.org>

--- a/overlay-clapper/make.conf
+++ b/overlay-clapper/make.conf
@@ -8,6 +8,7 @@ LINUX_FIRMWARE="iwlwifi-7260 ibt-hw fw_sst"
 
 USE="${USE} dptf kernel-3_10 lockvt"
 USE="${USE} wireless38"
+USE="${USE} touchview"
 
 # TODO(bhthompson): change to -march=slm when supported by CrOS GCC
 MARCH_TUNE="-march=corei7"
