--- a/overlay-glimmer/make.conf
+++ b/overlay-glimmer/make.conf
@@ -8,6 +8,7 @@ LINUX_FIRMWARE="iwlwifi-7260 ibt-hw fw_sst"
 
 USE="${USE} dptf kernel-3_10 lockvt"
 USE="${USE} wireless38"
+USE="${USE} touchview"
 
 # TODO(bhthompson): change to -march=slm when supported by CrOS GCC
 MARCH_TUNE="-march=corei7"
