veyron: turn on early firmware selection using vboot2
this change enables coreboot to perform early firmware selection using vboot2.

BUG=none
TEST=Booted Pinky. Verified early firmware selection in the log.
BRANCH=none
Signed-off-by: Daisuke Nojiri <dnojiri@chromium.org>
CQ-DEPEND=CL:219103

Change-Id: I26d6cef8973966194bc1511924bc118a4840c122
Reviewed-on: https://chromium-review.googlesource.com/219340
Reviewed-by: Julius Werner <jwerner@chromium.org>
Tested-by: Daisuke Nojiri <dnojiri@chromium.org>
Commit-Queue: Daisuke Nojiri <dnojiri@chromium.org>

--- a/overlay-veyron/make.conf
+++ b/overlay-veyron/make.conf
@@ -14,6 +14,7 @@ CXXFLAGS="${CXXFLAGS} ${MARCH_TUNE}"
 USE="${USE} bootimage cros_ec depthcharge device_tree gpu_sandbox_start_early"
 USE="${USE} hardfp kernel-3_14 legacy_keyboard legacy_power_button neon"
 USE="${USE} -opengl opengles rk32"
+USE="${USE} unified_depthcharge vboot2"
 
 TTY_CONSOLE="${TTY_CONSOLE} ttyS2"
 
