Install peerd via USE flag rather than direct dependency
We need to have USE flag support because we need the flags to enable
autotests.  We may as well include peerd through only that mechanism
rather than two different mechanisms.

BUG=chromium:412975
TEST=`emerge-gizmo --info | grep peerd` shows we're including it.

CQ-DEPEND=CL:219562

Change-Id: I2799818a4c4f2020d09d73ded9b270aa99824638
Reviewed-on: https://chromium-review.googlesource.com/219571
Tested-by: Christopher Wiley <wiley@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Christopher Wiley <wiley@chromium.org>

--- a/overlay-gizmo/make.conf
+++ b/overlay-gizmo/make.conf
@@ -13,7 +13,7 @@ USE="${USE} panther -subpixel_rendering"
 USE="${USE} -cellular -cros_disks -cros_p2p -debugd -opengl -vpn"
 
 # Defining USE flags for the board.
-USE="${USE} buffet"
+USE="${USE} buffet peerd"
 
 # Tune for panther i7
 MARCH_TUNE="-march=corei7"
